Edit social media

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 						<ul class="offer__wrapper d-flex justify-content-around">
 							<li class="offer__item offer__item_dark-blue">
 								<a href="https://www.facebook.com/" class="person__facebook" class="offer__link" target="_blank">
-									<i class="fab fa-facebook-square"></i>
+									<i class="fab fa-odnoklassniki"></i>
 								</a>
 							</li>
 							<li class="offer__item offer__item_light-blue">
 								<a href="https://twitter.com/?lang=ru" class="offer__link" target="_blank">
-									<i class="fab fa-twitter"></i>
+									<i class="fab fa-vk"></i>
 								</a>
 							</li>
 							<li class="offer__item offer__item_blue">
@@ -515,20 +515,20 @@
 							</div>
 							<p>
 								<a href="#" class="low__link">
-									65000,<br>
-									Украина, г. Одесса<br>
-									Ул Базарная, 36
+									11111,<br>
+									Россия, г. Москва<br>
+									Ул. Авиамоторная, 21б
 								</a>
 							</p>
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-3">
 						<div class="couching d-flex">
-							<span class="couching__sign">W</span>
+							<span class="couching__sign">А</span>
 							<div class="couching__wrapper">
 								<p class="couching__text">
-									Дизайн и разработка<br>
-									<span> Коучинг по верстке </span>
+									Разработка<br>
+									<span> Курсы по разработке </span>
 								</p>
 							</div>
 						</div>
