--- a/about.html
+++ b/about.html
@@ -467,20 +467,20 @@
 							</div>
 							<p>
 								<a href="#" class="low__link">
-									65000,<br>
-									Украина, г. Одесса<br>
-									Ул Базарная, 36
+									111111,<br>
+									Россия, г. Москва<br>
+									Ул Авиамоторная, 21б
 								</a>
 							</p>
 						</div>
 					</div>
 					<div class="col-sm-6 col-md-3">
 						<div class="couching d-flex">
-							<span class="couching__sign">W</span>
+							<span class="couching__sign">А</span>
 							<div class="couching__wrapper">
 								<p class="couching__text">
-									Дизайн и разработка<br>
-									<span> Коучинг по верстке </span>
+									Разработка<br>
+									<span> Курс по разработке </span>
 								</p>
 							</div>
 						</div>
